--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,5 +25,5 @@ steps:
   displayName: 'Install Python Dependencies'
 
 - script: |
-    python diagram_solutions.py
+    python src/diagrams/diagram_solutions.py
   displayName: 'Python Run'
