--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,8 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     pip install requests
+    pip install diagrams
+    pip install graphviz
   displayName: 'Install Python Dependencies'
 
 - script: |
