--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
 # base packages
-python-dateutil
-dds-py
+#python-dateutil
+#dds-py
 #-e git+https://github.com/tjhunter/dds_py#egg=dds-py
-xlwt
+#xlwt
 
 # libraries
 diagrams
 graphviz
 requests
-beautifulsoup4
-scikit-learn
-matplotlib
-spacy<3.0.0
-numpy<1.20
-scipy
-jedi<0.18.0
-pandas
-altair
+#beautifulsoup4
+#scikit-learn
+#matplotlib
+#spacy<3.0.0
+#numpy<1.20
+#scipy
+#jedi<0.18.0
+#pandas
+#altair
 
 # local libraries
 jupyter<=1.0.0
 
 # Testing, typing
-pytest<=6.2
-mypy==0.790
+#pytest<=6.2
+#mypy==0.790
 #flake8
-black==20.8b1
-data-science-types<0.3
+#black==20.8b1
+#data-science-types<0.3
 
 
 # Testing, typing
