--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,10 @@ steps:
 #     pip install graphviz
 #   displayName: 'Install Python Dependencies'
 
+- script: python -m pipenv lock -r > requirements_generated.txt
+          ls -lrt
+  displayName: 'Create requirements.txt from Pipfile'
+
 - script: |
     python -m pip install --upgrade pip
     pip install -r requirements.txt
