--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,13 @@
 #-e git+https://github.com/tjhunter/dds_py#egg=dds-py
 #xlwt
 
+# adls size
+# azure-functions==1.12.0
+# azure-functions-durable==1.2.2
+azure-identity==1.12.0
+azure-mgmt-storage==21.0.0
+azure-storage-file-datalake==12.9.1
+
 # libraries
 diagrams
 graphviz
